fixing spacing on hood page

--- a/app/assets/stylesheets/moods.css.sass
+++ b/app/assets/stylesheets/moods.css.sass
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .mood-box
+  margin: auto
+  width: 100%
+  max-height: 240px
+  overflow: hidden
   .text-overlay
     position: relative
     top: 25%
@@ -12,3 +16,5 @@
       -o-transition: all 0.5s ease
       -ms-transition: all 0.5s ease
       transition: all 0.5s ease
+  .bg-mood
+    width: 100%
